This changelog shows the changes made for each version
Date format is US mm/dd/yy
--------------------------------------------
v 1.2.9 2/ /26
- support ZOrder setting for plot lines
- added a new option to Test menu for ZOrder specification
- do first gain test at 1mV instead of 10mV for 60db configurations
- added a min frequency Setting for noise band
v 1.2.8 2/8/26
- enable empirically set output range method using min distortion in settings
- show spectrum and imd markers on click rather than requiring run
- serious refactor of viewmodel copying
- add Test menu for the graph popup commands
- rename Start to Once when there is a Run button
- support up to 4 data summary boxes to spectrum test (2 more than previous)
- repair data summary box color match to line color
- add output gain block setting for higher voltage outputs
v 1.2.7 2/1/26
- improve menu position and other esthetics
- add blackman-harris 7 window to the window list, rename blackman to blackman-3
- repaired: renamed files could not be loaded with the new Zip code
- fix Response plots color not updating immediately when palette colors change
- hook up second Y axis settings for group delay
- reduce the relay delay time after empirical testing
- reduce graph limit update defn for the GUI upgrade and to enable multi-pin/fit
- implement pinall and fitall for popup menu on graphs
- refactor Actions to generic finally
- add snapshot of data option
- move residual to a separate axis and remove scaling
- upgrade group delay creation
- add ability to disable phase display
- set contrast color for plot headings
v 1.2.6 1/24/26
- add a QA40x readme on ports
- read the dc supply voltage, dc current, and temperature on device init
- put them all upper-right updating on each measurement
- have scope use bin-center frequencies
- add ability to edit Gotten plot name
- add a default data folder setting
- finally fix phase upwrapping
- add early group delay display
- try out second Y axis for group delay