@@ -25,8 +25,6 @@ namespace QA40xPlot.Actions
 	{
 		private List<MyDataTab> OtherTabs { get; set; } = new List<MyDataTab>(); // Other tabs in the document
 
-		private float _Thickness = 2.0f;
-
 		private List<SweepLine>? FrequencyLines(MyDataTab page)
 		{
 			return (List<SweepLine>?)page.GetProperty("Left");
@@ -741,7 +739,7 @@ namespace QA40xPlot.Actions
 			if (!showLeft && !showRight)
 				return;
 
-			float lineWidth = vm.ShowThickLines ? _Thickness : 1;
+			float lineWidth = vm.ShowThickLines ? ViewSettings.Thickness : 1;
 			float markerSize = vm.ShowPoints ? lineWidth + 3 : 1;
 
 			// here Y values are in dBV
