@@ -16,11 +16,11 @@
 <h1>What&#39;s New in QA40xPlot</h1>
 <h5>v 1.2.9&nbsp;&nbsp;&nbsp;&nbsp; Feb , 2026</h5>
 <h2>Risk Summary</h2>
-<p>Unknown</p>
+<p>Should be minimal. </p>
 <h2>Added Plot Line ordering to the Test menu and Settings</h2>
-<p>From the test menu you can decide which traces are plotted on top. Choose from Left, Right, Get/Left (Get plots are on top and Left channel is on top), and Get/Right</p>
-<h2>&nbsp;</h2>
-<p>&nbsp;</p>
+<p>From the test menu you can decide which traces are plotted on top. Choose from Left, Right, Get/Left (Get plots are on top and Left channel is on top), and Get/Right. Applies to all plots.</p>
+<h2>Added Plot Line thickness setting</h2>
+<p>The default thick value of 2.0 was a little thin with my medium gray background so it&#39;s now a floating point Setting that applies to all plots.</p>
 <h5>__________________________________________________________________________________________________________</h5>
 <h1>&nbsp;</h1>
 <h1>---- Older&nbsp; Entries ----</h1>
